crates/toml_edit/tests/snapshots/invalid/string/bad-hex-esc-04.stderr
TOML parse error at line 1, column 20
  |
1 | bad-hex-esc-04 = "\x 50"
  |                    ^
missing escaped value, expected `b`, `e`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
